--- a/README
+++ b/README
@@ -10,8 +10,8 @@ applications an easy means to open and identify rpmsg character devices
 created by the Linux kernel rpmsg-char driver using the virtio-rpmsg-bus
 transport back-end.
 
-The library currently supports the TI K3 AM65x, J721E and J7200 SoCs, but
-can be easily scaled to support other SoCs.
+The library currently supports the TI K3 AM65x, AM64x, AM62x, J721E, J7200,
+J721S2 and J784S4 SoCs, but can be easily scaled to support other SoCs.
 
 
 2. Sources
