--- a/README
+++ b/README
@@ -11,8 +11,8 @@ created by the Linux kernel rpmsg-char driver using the virtio-rpmsg-bus
 transport back-end.
 
 The library currently supports the TI K3 AM65x, AM64x, AM62x, AM62Ax, AM62Px,
-J721E, J7200, J721S2 and J784S4 SoCs, but can be easily scaled to support 
-other SoCs.
+J721E, J7200, J721S2, J784S4 and J722S SoCs, but can be easily scaled to
+support other SoCs.
 
 
 2. Sources
